--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,36 @@
       .m-b-md {
           margin-bottom: 30px;
       }
+
+      textarea {
+        height: 150px;
+      }
+
+      #upvote_button {
+        background-color: #2c9622;
+        color: white
+      }
+      
+      #downvote_button {
+        background-color: #a11d1d;
+        color: white
+      }
+
+      #remove_vote_button {
+        color: #6d0606;
+        font-style: italic
+      }
+
+      #add_quote_button {
+        background-color: #636b6f;
+        color: #ffffff;
+      }
+
+      footer {
+        color: rgb(19, 19, 19)
+      }
+
+
     </style>
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
