add/remove comments for clarity; update page title

--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,8 @@
           margin-bottom: 30px;
       }
 
+    /* Override the Bootstrap display settings on the following items: */
+
       textarea {
         height: 150px;
       }
